--- a/slot5/ex1/src/App.css
+++ b/slot5/ex1/src/App.css
@@ -2,8 +2,8 @@
 body {
   background-color: #f7f6f2;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  padding-top: 92px;    /* bù cho navbar fixed-top */
-  padding-bottom: 72px; /* bù cho footer fixed-bottom */
+  padding-top: 92px;
+  padding-bottom: 72px;
   color: #2b2b2b;
 }
 
@@ -12,6 +12,7 @@ body {
   color: #333 !important;
   font-weight: 500;
 }
+
 .nav-link:hover {
   color: #234f38 !important;
 }
@@ -21,13 +22,14 @@ body {
   background-color: #234f38 !important;
   border: none !important;
 }
+
 .btn-success:hover {
   background-color: #1b3e2c !important;
 }
 
 /* Forms & Filters */
-.form-select, 
-.form-control, 
+.form-select,
+.form-control,
 .input-group-text {
   height: 44px;
   font-size: 0.95rem;
